# coffee

./: .codedocs  .cproject  .gitignore  .project  .sconsign.dblite  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  SConstruct  coverage.sh  git-alias.sh  libNemesis.core.b  license_pattern.txt  official.ss  remember-valgrind-suppresion.txt  valgrind-suppression.txt  wepa_project.files  wepa_project.includes
docs/: Doxyfile  Doxyfile.in  MainPage.html
include/wepa/: wepa.kdev4
scripts/: bumping-version.sh  cmake-vmtest  codedocs-gen.sh  git-alias.sh  synopsys.sh
source/adt/: CMakeLists.txt  Exception.cc  RuntimeException.cc  SConscript  Semaphore.cc  adt.AsHexString.cc  adt.AsString.cc  adt.DataBlock.cc  adt.Microsecond.cc  adt.Millisecond.cc  adt.RuntimeException.cc  adt.SCCS.cc  adt.Second.cc  adt.StreamString.cc
source/app/: Application.cc  ApplicationEngineRunner.cc  ApplicationServiceStarter.cc  CMakeLists.txt  Engine.cc  EngineIf.cc  Runnable.cc  SCCS.cc  SConscript  Service.cc  functions.cc
source/balance/: Balance.cc  BalanceIf.cc  ByRange.cc  CMakeLists.txt  GuardResourceList.cc  Indexed.cc  Resource.cc  ResourceList.cc  RoundRobin.cc  SCCS.cc  SConscript  Strategy.cc  StrategyByRange.cc  StrategyIndexed.cc  StrategyRoundRobin.cc
source/basis/: AsString.cc  CMakeLists.txt  DataBlock.cc  Exception.cc  RuntimeException.cc  SCCS.cc  Semaphore.cc  adt.AsHexString.cc  adt.SCCS.cc  adt.StreamString.cc
source/config/: CMakeLists.txt  SCCSRepository.cc  SConscript  SConstruct  config.Release.cc  config.SCCS.cc
source/dbms/: CMakeLists.txt  Connection.cc  Database.cc  DatabaseException.cc  GuardConnection.cc  GuardStatement.cc  ResultCode.cc  SCCS.cc  SConscript  Statement.cc
source/dbms.ldap/: CMakeLists.txt  LdapConnection.cc  LdapDatabase.cc  LdapErrorCodeInterpreter.cc  LdapInputBinder.cc  LdapOutputBinder.cc  LdapStatement.cc  SCCS.cc
source/dbms.sqlite/: CMakeLists.txt  SCCS.cc  SConscript  SConstruct  SqliteConnection.cc  SqliteDatabase.cc  SqliteErrorCodeInterpreter.cc  SqliteInputBinder.cc  SqliteOutputBinder.cc  SqliteStatement.cc
source/http/: CMakeLists.txt  HttpClient.cc  HttpHeader.cc  HttpMessage.cc  HttpRequest.cc  HttpResponse.cc  HttpService.cc  SCCS.cc
source/logger/: BacktraceWriter.cc  CMakeLists.txt  CircularTraceWriter.cc  DefaultFormatter.cc  Level.cc  Logger.cc  SCCS.cc  SConscript  SysLogWriter.cc  UnlimitedTraceWriter.cc  Writer.cc
source/networking/: AsyncSocket.cc  ClientSocket.cc  NetworkingService.cc  PublisherSocket.cc  SCCS.cc  ServerSocket.cc  Socket.cc  SubscriberSocket.cc
source/persistence/: Accessor.cc  AccessorIf.cc  CMakeLists.txt  Class.cc  ClassBuilder.cc  GuardClass.cc  Object.cc  PrimaryKey.cc  PrimaryKeyBuilder.cc  Recorder.cc  Repository.cc  SConscript  Storage.cc
source/test/app/: Application_test.cc  CMakeLists.txt  app_test.cc
source/test/dbms/: CMakeLists.txt  Compare_test.cc  Date_test.cc  Definition_test.cc  Float_test.cc  Integer_test.cc  LongBlock_test.cc  MultiString_test.cc  Set_test.cc  ShortBlock_test.cc  String_test.cc  TimeStamp_test.cc  dbms_test.cc
source/test/dbms.ldap/: CMakeLists.txt  LdapConnectionParameters_test.cc  LdapDatabase_test.cc  LdapStatementParameters_test.cc
source/test/dbms.sqlite/: CMakeLists.txt  SqliteDatabase_test.cc
source/test/networking/: CMakeLists.txt  ClientSocket_test.cc  NetworkingFixture.cc  NetworkingFixture.hpp  PublisherSocket_test.cc  Publisher_Subscribers_test.cc  Request_Response_test.cc  ServerSocket_test.cc  SubscriberSocket_test.cc  context.xml
source/test/persistence/: CMakeLists.txt  ClassBuilder_test.cc  Class_test.cc  PersistenceMocks.cc  PrimaryKey_test.cc  Repository_test.cc  Storage_test.cc  persistence_test.cc
source/test/time/: CMakeLists.txt  Clock_test.cc  TimeFixture.hpp  Timer_test.cc
source/test/xml/: CMakeLists.txt  DTD_test.cc  Reading_Document_test.cc  Writing_Document_test.cc  example00.xml  vertex.dtd
source/time/: CMakeLists.txt  SCCS.cc  TimeEvent.cc  TimeService.cc
source/xml/: Attribute.cc  CMakeLists.txt  Compiler.cc  Content.cc  DTD.cc  Document.cc  Node.cc  SCCS.cc  SConscript
test/adt/: Backtracking_4x4queen_test.cc  Backtracking_addup_test.cc  (+19 more)
test/balance/: BasicBalance_test.cc  ByRangeBalance_test.cc  CMakeLists.txt  IndexedBalance_test.cc  ResourceListFixture.hpp  RoundRobinBalance_test.cc  SConscript  StrategyByRange_test.cc  StrategyIndexed_test.cc  StrategyRoundRobin_test.cc  TestResource.hpp  balance_test.cc
test/dbms/: CMakeLists.txt  Compare_test.cc  Date_test.cc  Definition_test.cc  Float_test.cc  Integer_test.cc  LongBlock_test.cc  MockApplication.cc  MockApplication.hpp  MockConnection.cc  MockConnection.hpp  MockDatabase.cc  MockDatabase.hpp  MockInput.hpp  MockLowLevelRecord.hpp  MockOutput.hpp  MultiString_test.cc  PrintChrono.hpp  SConscript  Set_test.cc  ShortBlock_test.cc  String_test.cc  TimeStamp_test.cc  dbms_test.cc
test/dbms.sqlite/: CMakeLists.txt  SConscript  SqliteDatabase_test.cc  dbms.sqlite_test.cc
test/http/: CMakeLists.txt  HttpMessage_test.cc  HttpProtocolDecoder_test.cc  HttpProtocolEncoder_test.cc  HttpService_test.cc  URLBuilder_test.cc  URLParser_test.cc  http_test.cc
test/networking/: CMakeLists.txt  ClientSocket_test.cc  NetworkingFixture.cc  NetworkingFixture.hpp  PublisherSocket_test.cc  Publisher_Subscribers_test.cc  Request_Response_test.cc  ServerSocket_test.cc  SubscriberSocket_test.cc  networking_test.cc
test/persistence/: CMakeLists.txt  ClassBuilder_test.cc  Class_test.cc  MockConnection.cc  MockConnection.hpp  MockDatabase.cc  MockDatabase.hpp  MockInput.hpp  MockLowLevelRecord.hpp  MockOutput.hpp  PersistenceMocks.cc  PersistenceMocks.hpp  PrimaryKey_test.cc  Repository_test.cc  SConscript  Storage_test.cc  persistence_test.cc
test/time/: CMakeLists.txt  Clock_test.cc  TimeFixture.hpp  Timer_test.cc  time_test.cc
test/xml/: CMakeLists.txt  DTD_test.cc  Document_test.cpp  Reading_Document_test.cc  Reading_Document_test.cpp  SConscript  Writing_Document_test.cc  Writing_Document_test.cpp  bad.xml  bad_vertex.xml  vertex.xml  xml_test.cc
(+549 files in other folders)
